--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,10 @@ buildscript {
         targetSdkVersion = 28
 
         // App Dependencies
+        annotationsVersion = '16.0.1'
         appCompatVersion = '1.0.2'
         espressoVersion = '3.1.0-alpha1'
+        glideVersion = '4.8.0'
         gradleVersion = '3.3.0-alpha09'
         junitVersion = '4.12'
         kotlinVersion = '1.3.10'
