--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.10'
+
     ext {
         // SDK and tools
+        compileSdkVersion = 28
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
@@ -10,6 +13,7 @@ buildscript {
         // App Dependencies
         annotationsVersion = '16.0.1'
         appCompatVersion = '1.0.2'
+        constraintLayoutVersion = '1.1.3'
         espressoVersion = '3.1.0-alpha1'
         glideVersion = '4.8.0'
         gradleVersion = '3.3.0-alpha09'
@@ -24,7 +28,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 allprojects {
