Changed artefact name

--- a/network-imageview/build.gradle
+++ b/network-imageview/build.gradle
@@ -13,15 +13,15 @@ buildscript {
 
 ext {
     bintrayRepo = 'NetworkImageView'
-    bintrayName = 'networkimageview'
+    bintrayName = 'network-imageview'
     publishedGroupId = 'org.shadracktaeli'
-    libraryName = 'networkimageview'
-    artifact = 'networkimageview'
+    libraryName = 'network-imageview'
+    artifact = 'network-imageview'
     libraryDescription = 'Image loader helper'
     siteUrl = 'https://github.com/shadracktaeli/Network-ImageView'
     gitUrl = 'https://github.com/shadracktaeli/Network-ImageView.git'
     libraryVersion = '1.0.0'
-    developerId = 'shadrack'
+    developerId = 'shadrack '
     developerName = 'Shadrack Taeli'
     developerEmail = 'shadracktl40@gmail.com'
     licenseName = 'The Apache Software License, Version 2.0'
