--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@ buildscript {
         constraintLayoutVersion = '1.1.3'
         espressoVersion = '3.1.0-alpha1'
         glideVersion = '4.8.0'
-        gradleVersion = '3.3.0-alpha09'
+        gradleVersion = '3.3.0'
         junitVersion = '4.12'
-        kotlinVersion = '1.3.10'
+        kotlinVersion = '1.3.11'
         mavenGradlePluginVersion = '1.5'
         runnerVersion = '1.1.0-alpha1'
     }
