--- a/network-imageview/build.gradle
+++ b/network-imageview/build.gradle
@@ -5,9 +5,10 @@ apply plugin: 'kotlin-kapt'
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:1.1.0"
+        classpath 'com.android.tools.build:gradle:3.3.1'
     }
 }
 
